--- a/PP02/PP02.vcxproj
+++ b/PP02/PP02.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{81a5c7e1-e9f3-4dcc-a082-9b872d78d338}</ProjectGuid>
-    <RootNamespace>PP01</RootNamespace>
+    <ProjectGuid>{8b2670e5-555c-4041-b6b9-655e1906325f}</ProjectGuid>
+    <RootNamespace>PP02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,8 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lecture02-2.cpp" />
-    <ClCompile Include="Lecture02.cpp" />
+    <ClCompile Include="Lecture03.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="KeyCommand.hpp" />
+    <ClInclude Include="MCommand.hpp" />
+    <ClInclude Include="MGameLoop.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
