--- a/PP04/PP04.vcxproj
+++ b/PP04/PP04.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MConsolUtil.hpp" />
