--- a/PP04/PP04.vcxproj.filters
+++ b/PP04/PP04.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Player.hpp">
       <Filter>헤더 파일</Filter>
     </ClCompile>
+    <ClCompile Include="A.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt">
@@ -32,6 +35,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MConsolUtil.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Monster.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
